syntax = "proto3";

package api.article.v1;

option go_package = "exp-sqlx/api/article/v1;v1";
option java_multiple_files = true;
option java_package = "api.article.v1";

import "google/api/annotations.proto";

message Article {
  int64  id      = 1;
  string title   = 2;
  string content = 3;
}

service ArticleService {
  rpc CreateArticle (CreateArticleRequest) returns (CreateArticleReply){
    option (google.api.http) = {
      post: "/v1/article/"
      body: "*"
    };
  }
  rpc UpdateArticle (UpdateArticleRequest) returns (UpdateArticleReply){
    option (google.api.http) = {
      put: "/v1/article/{id}"
      body: "*"
    };
  }
  rpc DeleteArticle (DeleteArticleRequest) returns (DeleteArticleReply){
    option (google.api.http) = {
      delete: "/v1/article/{id}"
      body: "*"
    };
  }
  rpc GetArticle (GetArticleRequest) returns (GetArticleReply){
    option (google.api.http) = {
      get: "/v1/article/{id}"
      body: "*"
    };
  }
  rpc ListArticle (ListArticleRequest) returns (ListArticleReply){
    option (google.api.http) = {
      get: "/v1/article/"
    };
  }
}

message CreateArticleRequest {}
message CreateArticleReply {}

message UpdateArticleRequest {}
message UpdateArticleReply {}

message DeleteArticleRequest {}
message DeleteArticleReply {}

message GetArticleRequest {}
message GetArticleReply {}

message ListArticleRequest {}
message ListArticleReply {
  repeated Article results = 1;
}